// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the <Subheader /> component should render 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.h2) />
</ForwardRef(styled.div)>
`;

exports[`the <Subheader /> component should render with a dynamic title 1`] = `
<ForwardRef(styled.div)>
  <ForwardRef(styled.h2)>
    Test Application
  </ForwardRef(styled.h2)>
</ForwardRef(styled.div)>
`;
